--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ header {
     margin-bottom: 10px;
 }
 
+.guide_msg {
+  color: red;
+}
+
 /* footer */
 footer {
     background-color: rgb(207, 190, 190);
